<resources>
    <string name="app_name">MarvelApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="stories">Stories</string>
    <string name="event">Event</string>
    <string name="related_links">RELATED LINKS</string>
    <string name="detail">Detail</string>
    <string name="wiki">Wiki</string>
    <string name="comiclink">Comiclink</string>
    <string name="marvel_logo">Marvel Logo</string>
    <string name="cancel">Cancel</string>
    <string name="close_viewer">Close viewer</string>
    <string name="page_number_format">%1$d / %2$d</string>
</resources>