<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.CharacterDetailsFragment">

    <ImageView
        android:id="@+id/blurBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="fitXY" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/black" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/collapsingImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/marvel_logo"
                app:layout_collapseMode="parallax" />


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:tint="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <!-- Name Text -->
            <TextView
                android:id="@+id/characterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A.I.M."
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <!-- Description Text -->
            <TextView
                android:id="@+id/characterDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A.I.M is a terrorist organization bent on destroying the world."
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- Comics Section Title -->
            <TextView
                android:id="@+id/comicsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/comics"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Horizontal scrollable comics RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comicsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_details"
                tools:visibility="visible" />

            <!-- Comics Section Title -->
            <TextView
                android:id="@+id/seriesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/series"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Horizontal scrollable comics RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_details"
                tools:visibility="visible" />

            <!-- Comics Section Title -->
            <TextView
                android:id="@+id/storiesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/stories"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Horizontal scrollable comics RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/storiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_details"
                tools:visibility="visible" />

            <!-- Comics Section Title -->
            <TextView
                android:id="@+id/eventHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Horizontal scrollable comics RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_details"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/relatedLinkSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related_links"
                android:textColor="#FF0000"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Detail Item -->
            <LinearLayout
                android:id="@+id/detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="-1"
                    android:scaleY="-1"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white" />
            </LinearLayout>

            <!-- Wiki Item -->
            <LinearLayout
                android:id="@+id/wiki_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wiki"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="-1"
                    android:scaleY="-1"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white" />
            </LinearLayout>

            <!-- Comiclink Item -->
            <LinearLayout
                android:id="@+id/comiclink_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:paddingVertical="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comiclink"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="-1"
                    android:scaleY="-1"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
